--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
+    "@timfish/forge-externals-plugin": "^0.2.1",
     "electron-squirrel-startup": "^1.0.1",
     "sharp": "^0.34.5"
   }
